--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Lock files
+package-lock.json
+npm-shrinkwrap.json
+
 # TypeScript v1 declaration files
 typings/
 
